@@ -24,6 +24,7 @@
 - FIX: Incorrect project:// path in the ivysettings configuration make the UI crash (IVYDE-203)
 - FIX: conf attributes must not be null (IVYDE-209) (thanks to Ivica Loncar)
 - FIX: Errors are not reported when multiple resolve are launched (IVYDE-219)
+- FIX: Ivy settings file cannot be loaded via http url (IVYDE-218)
 
   version 2.0.0 final
 ==========================
